Closed
Bug 219245
Opened 22 years ago
Closed 22 years ago
Mail window starts spinning chewing up 100% CPU [related perhaps to checkin for bug 218874]
Categories
(MailNews Core :: Networking: IMAP, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: Mitch, Assigned: Bienvenu)
References
Details
Attachments
(1 file)
|
1.26 KB,
patch
|
mscott
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5b) Gecko/20030915
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5b) Gecko/20030915
After new checkout from cvs that fixed bug 219185 so i can now read email,
i note that after periods of inactivity, that the mail client starts spinning
chewing up 100% cpu.
I have a stripped build (rebuilding with debug symbols) but attaching a debugger
shows we're in
(gdb) bt
#0 0x41ac10d1 in nsMsgLineStreamBuffer::ReadNextLine(nsIInputStream*,
unsigned&, int&, unsigned*) () from /usr/local/mozilla/libmsgbaseutil.so
Reproducible: Always
Steps to Reproduce:
1. Start up mail client, read some emails
2. Leave it in its normal state to check email periodically
3. CPU goes to 100%
Actual Results:
CPU pinned at 100%
Expected Results:
CPU not pinned at 100%
related perhaps to checkin for bug 218874
| Assignee | ||
Comment 1•22 years ago
|
||
*** Bug 219256 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 2•22 years ago
|
||
what's going on here is that the blocking reads aren't blocking until the
connection is established but rather returning success and no data - this
causes us to spin very rapidly! Cc'ing Darin for his thoughts about what we
should do about this. One possibility is that if the blocking read returns no
data, we could sleep for 50 milliseconds or something...I think this only
happens when the connection is established. After that, the blocking reads
really block.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Comment 3•22 years ago
|
||
readNextLine needs to check for blocking streams, and not return when no data
available, but do a blocking read.
Updated•22 years ago
|
Attachment #131513 -
Flags: superreview+
| Assignee | ||
Comment 4•22 years ago
|
||
fix checked in - please try tomorrow's build.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•