Bug #219245 --> Mail window starts spinning chewing up 100% CPU [related perhaps to checkin for bug 218874]